# university

./: .clangd  .gitignore  CMakeLists.txt  README.md  egw.py  requirements.txt
.idx/: dev.nix
3P/: .rbt  red-black-tree.c
3P/binary-tree/: .bst  binary-search-tree.c  binary-tree.c
3P/prova-2/: .leaf  sum-leaf.c
3P/rbt/: red-black-tree.c
4P/paa/inputs/: criptografia-input.txt  criptografia-output.txt  labirinto-input.txt  sequenciamento-output.txt  transportadora-output.txt
4P/paa/u1/: .hash  .poxim  hash-map.cpp  poxim-tech.c  poxim-tech.cpp
4P/paa/u1/datagrama/: gabrielbatista_202300027249_datagrama.cpp  input.txt
4P/paa/u1/poxim_tech/: .poxim  bst.cpp  gabrielbatista_202300027249_porto.cpp  generator.py  hash-map.cpp  input.txt  porto.output
4P/statistics/u1/: .stats  data_analitics.cpp
5P/bd/: connection.js  excluir.js  package-lock.json  package.json  script.js
5P/bd/atividade_1_db/: main.js
5P/bd/utils/: executeQuery.js  executeSQLFile.js  pool.js
5P/ia/: 8_queens_problem.py  teste_prob.py
5P/ppc/: .clangd  detalhes.txt  ppc.md  project.c
5P/so/1_process_comunication/: monitor.c  peterson.c  semaforo.c
5P/so/3_deadlocks/: .ex1  exercise_1.cpp
5P/so/process_comunication/: peterson.c  peterson.cpp  semaforo.c  tsl.c
6P/: atividade.ipynb
6P copy/: atividade.ipynb
6P/pimg/: aula03-funcoes-pontuais.ipynb  aula04.ipynb
6P/pimg/atividade1/: atividade01.ipynb
6P/pimg/aula02/: taylor.ipynb
6P/pimg/aula03/: aula03-funcoes-pontuais.ipynb
6P/pimg/aula04/: aula04.ipynb
6P/pimg/slides/: filtro-mediana.ipynb  filtros-espaciais.ipynb
(+115 files in other folders)
